--- a/templates/AssetProfile.html
+++ b/templates/AssetProfile.html
@@ -125,7 +125,7 @@
                 <td>{{software.pk}}</td>
                 {% endif %}
                 <td class="link"><a href="{% url 'softwareprofile' groupslug=software.asset.group.slug assetslug=software.asset.slug softwareslug=software.slug %}">{{software}}</a></td>
-                <td>{{software.vulnerabilities.count}}</td>
+                <td>{{software.getvulnerabilities.count}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -145,17 +145,17 @@
                 <th scope="col">#</th>
                 {% endif %}
                 <th scope="col">{% trans "name" %}</th>
-                <th scope="col">{% trans "software" %}</th>
+                <th scope="col">{% trans "CPE" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for vulnerability in asset.getvulnerabilities %}
                 <tr>
                 {% if request.user.is_staff %}
-                <td>{{software.pk}}</td>
+                <td>{{vulnerability.pk}}</td>
                 {% endif %}
                 <td class="link"><a href="">{{vulnerability}}</a></td>
-                <td class="link"><a href="{% url 'softwareprofile' groupslug=vulnerability.software.asset.group.slug assetslug=vulnerability.software.asset.slug softwareslug=vulnerability.software.slug %}">{{vulnerability.software}}</a></td>
+                <td class="link">{{vulnerability.cpe}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
