--- a/templates/Login.html
+++ b/templates/Login.html
@@ -7,7 +7,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Minotaur</title>
+      <title>Vault</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="{% static 'css/basic.css' %}">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
                 {% endfor %}
             </div>
             {% endif %}
-            <h1 class="h2 mb-3 font-weight-normal">Minotaur</h1>
+            <h1 class="h2 mb-3 font-weight-normal">Vault</h1>
             <hr>
             <h1 class="h3 mb-3 font-weight-normal">{% trans "Login" %}</h1>
             <br>
