--- a/templates/SoftwareProfile.html
+++ b/templates/SoftwareProfile.html
@@ -35,6 +35,7 @@
     {% csrf_token %}
     <button type="submit" class="btn btn-danger" name="deletesoftware" onclick="return confirm('{% trans "Are you sure?" %}')">{% trans "Delete" %}</button>
     <button type="button" class="btn btn-warning" style="color:white" data-toggle="modal" data-target="#softwaremodal">{% trans "Edit" %}</button>
+    <button type="submit" class="btn btn-primary" name="analysesoftware">{% trans "Analyse Vulnerabilities" %}</button>
 </form>
 <br>
 <details>
