--- a/templates/AssetProfile.html
+++ b/templates/AssetProfile.html
@@ -64,7 +64,11 @@
 <br>
 <details>
     <summary>{% trans "Details" %}</summary>
-    {% trans "Description" %} : {{asset.description}}<br>
+    <div class="card" style="width: 30rem;">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><h6>{% trans "Description" %} :</h6> {{asset.description}}</li>
+        </ul>
+    </div>
 </details>
 <br>
 <div class="container">
@@ -129,15 +133,13 @@
                 </tr>
                 {% endfor %}
             </tbody>
-            </table>
+        </table>
         </form>
     </div>
     <div id="vulnerabilities" class="tab-pane">
         <br>
         <h3>{% trans "Vulnerabilities" %}</h3>
         <br>
-        <form method="POST" >
-        {% csrf_token %}
         <table class="table display table-striped table-bordered">
             <thead>
                 <tr>
@@ -154,13 +156,12 @@
                 {% if request.user.is_staff %}
                 <td>{{vulnerability.pk}}</td>
                 {% endif %}
-                <td class="link"><a href="">{{vulnerability}}</a></td>
-                <td class="link">{{vulnerability.cpe}}</td>
+                <td class="link"><a href="{% url 'vulnerabilityprofile' vulnerabilityslug=vulnerability.slug %}">{{vulnerability}}</a></td>
+                <td>{{vulnerability.cpe}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
-            </table>
-        </form>
+        </table>
     </div>
 </div>
 {% endblock %}
