--- a/templates/Base.html
+++ b/templates/Base.html
@@ -46,7 +46,7 @@
             <!-- /#sidebar-wrapper -->
             <div id="content">
         
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
         
                         <button type="button" id="sidebarCollapse" class="btn btn-dark">
@@ -100,6 +100,7 @@
                     {% block content%}
                     {% endblock %}
                 </div>
+                <br>
                 <footer class="footer text-center">
                     <div class="container">
                         <span class="text-muted">Copyright &copy; Lilian Naretto 2022</span>
