--- a/templates/GroupProfile.html
+++ b/templates/GroupProfile.html
@@ -85,6 +85,7 @@
     {% csrf_token %}
     <button type="submit" class="btn btn-danger" name="deletegroup" onclick="return confirm('{% trans "Are you sure?" %}')">{% trans "Delete" %}</button>
     <button type="button" class="btn btn-warning" style="color:white" data-toggle="modal" data-target="#groupmodal">{% trans "Edit" %}</button>
+    <button type="submit" class="btn btn-primary" name="analysegroup">{% trans "Analyse Vulnerabilities" %}</button>
 </form>
 <br>
 <details>
