--- a/templates/SoftwareProfile.html
+++ b/templates/SoftwareProfile.html
@@ -58,6 +58,8 @@
         <th scope="col">#</th>
         {% endif %}
         <th scope="col">{% trans "name" %}</th>
+        <th scope="col">{% trans "severity" %}</th>
+        <th scope="col">{% trans "score" %}</th>
         </tr>
     </thead>
     <tbody>
@@ -67,6 +69,8 @@
         <td>{{software.pk}}</td>
         {% endif %}
         <td class="link"><a href="{% url 'vulnerabilityprofile' vulnerabilityslug=vulnerability.slug %}">{{vulnerability}}</a></td>
+        <td>{{vulnerability.severity}}</td>
+        <td>{{vulnerability.score}}</td>
         </tr>
         {% endfor %}
     </tbody>
