--- a/templates/Base.html
+++ b/templates/Base.html
@@ -73,9 +73,9 @@
                                     </form>
                                 </li>
                                 <li class="nav-item">
-                                    <form action="{% url 'search' %}" method="POST">
+                                    <form action="{% url 'search' %}" method="GET">
                                         {% csrf_token %}
-                                        <input type="search" name="search" class="form-control" placeholder="{% trans "Search..." %}">
+                                        <input type="search" name="search" class="form-control" placeholder="{% trans "Search..." %}" required>
                                     </form>
                                 </li>
                                 <li class="nav-item">
