--- a/templates/Groups.html
+++ b/templates/Groups.html
@@ -121,7 +121,7 @@
               {% if request.user.is_staff %}
               <td>{{asset.pk}}</td>
               {% endif %}
-              <td class="link"><a href="{% url 'assetprofile' groupslug=asset.group.slug assetslug=asset.slug %}">{{asset}}</a></td>
+              <td class="link"><a href="{% url 'assetprofile' groupslug=asset.group.slug assetslug=asset.slug %}">{{asset.name}}</a></td>
               <td class="link"><a href="{% url 'groupprofile' groupslug=asset.group.slug %}">{{asset.group}}</a></td>
               <td>{{asset.softwares.count}}</td>
               <td>{{asset.getvulnerabilities.count}}</td>
